tests/expectations/parser/finalize/finalize_fail.out
Error [EPAR0370005]: expected 'const', 'struct', 'record', 'mapping', '@', 'async', 'function', 'transition', 'inline', '}' -- found 'finalize'
    --> test:5:7
     |
   5 |     } finalize {
     |       ^^^^^^^^